fix Color Block styles in dark mode

--- a/components/ColorBlock/ColorBlock.less
+++ b/components/ColorBlock/ColorBlock.less
@@ -6,4 +6,8 @@
   border-radius   : var(--border-radius);
   padding         : var(--space-xs);
 
+  @media (prefers-color-scheme: dark) {
+    color: black;
+  }
+
 }
